<resources>
    <string name="app_name">SoumyaFirebase</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="password">password</string>
    <string name="age">Age</string>
    <string name="city">City</string>
    <string name="confrm_password">Confirm Password</string>
    <string name="signin">SignIn</string>
    <string name="entervalidemail">Enter valid Email</string>
    <string name="entervalidpassword">Enter valide Paswword</string>
    <string name="register">Create Account</string>
    <string name="sort_by_name">By Name</string>
    <string name="sort_by_age">By Age</string>
    <string name="sort_by_city">By City</string>
    <string name="filters">Filter</string>
    <string name="logout">Logout</string>
    <string name="no_data">No data found</string>
</resources>